Update and rename contact.html to gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gallery&nbsp;| Activate Ed</title>
+  <title>Gallery | Activate Ed</title>
 
-  <!-- Swiper CSS (other pages use it) -->
+  <!-- Swiper CSS (needed elsewhere) -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css"/>
 
-  <!-- Main CSS -->
+  <!-- Main styles -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- ▸ NAVBAR -->
+  <!-- ▸ NAV -->
   <header class="glass-nav">
     <div class="nav-wrap container">
       <a href="index.html" class="brand logo">Activate<span>Ed</span></a>
       <button id="burger" aria-label="Menu"><span></span></button>
-
       <nav class="desktop-nav">
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
@@ -25,7 +24,6 @@
         <a href="stories.html">Stories</a>
         <a class="active" href="gallery.html">Gallery</a>
       </nav>
-
       <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
     </div>
   </header>
@@ -34,17 +32,19 @@
   <section class="hero-simple reveal">
     <div class="container">
       <h1 class="section-title">Learning in Action</h1>
-      <p class="subhead">Real snapshots from our tutoring sessions &amp; workshops.</p>
+      <p class="subhead">Real snapshots from our tutoring sessions &amp;&nbsp;workshops.</p>
     </div>
   </section>
 
   <!-- ▸ IMAGE-ONLY GALLERY -->
   <section class="section">
     <div class="container gallery-grid">
-      <figure><img src="images/1000006998.png" alt=""></figure>
-      <figure><img src="images/1000007000.png" alt=""></figure>
-      <figure><img src="images/1000006999.png" alt=""></figure>
-      <figure><img src="images/1000007001.png" alt=""></figure>
+      <figure><img src="images/1000007007.png" alt=""></figure>
+      <figure><img src="images/1000007008.png" alt=""></figure>
+      <figure><img src="images/1000007009.png" alt=""></figure>
+      <figure><img src="images/1000007010.png" alt=""></figure>
+      <figure><img src="images/1000007011.png" alt=""></figure>
+      <figure><img src="images/1000007012.png" alt=""></figure>
     </div>
   </section>
 
