--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <img src="images/activelearning.png" alt="Active Learning" />
             <h3>Active Learning</h3>
             <p>
-              In-home, 1-to-1 tutoring for primary students in reading, writing and
+              In-home, one-to-one tutoring for primary students in reading, writing and
               mathematics—tailored lessons that make learning engaging &amp; effective.
             </p>
             <a href="services.html#activelearning" class="arrow-link underline">Learn more →</a>
@@ -78,7 +78,7 @@
 
           <!-- Middle School Mastery -->
           <div class="card pop reveal">
-            <img src="images/middle school.png" alt="Middle School Mastery" />
+            <img src="images/middle_school.png" alt="Middle School Mastery" />
             <h3>Middle School Mastery</h3>
             <p>
               Personalized instruction across all subjects, plus expert Regents, TACHS,
@@ -93,7 +93,7 @@
             <h3>High-School Success</h3>
             <p>
               Personalized academic coaching in every subject, Regents review and
-              AP-exam support for grades&nbsp;9–12.
+              AP-exam support for grades 9–12.
             </p>
             <a href="services.html#highschool" class="arrow-link underline">Learn more →</a>
           </div>
@@ -127,7 +127,7 @@
         </div>
         <div class="swiper-pagination"></div>
       </div>
-      <div style="text-align:center;margin-top:1.8rem">
+      <div style="text-align:center; margin-top:1.8rem">
         <a href="stories.html" class="btn ghost large">Read More Stories</a>
       </div>
     </section>
