--- a/gallery.html
+++ b/gallery.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gallery | Activate Ed</title>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Gallery | ActivateEd</title>
 
-  <!-- Swiper CSS (needed elsewhere) -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css"/>
-
-  <!-- Main styles -->
-  <link rel="stylesheet" href="style.css" />
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <!-- ▸ NAV -->
+  <!-- NAV -->
   <header class="glass-nav">
     <div class="nav-wrap container">
       <a href="index.html" class="brand logo">Activate<span>Ed</span></a>
@@ -23,20 +20,21 @@
         <a href="impact.html">Impact</a>
         <a href="stories.html">Stories</a>
         <a class="active" href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact</a>
       </nav>
       <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
     </div>
   </header>
 
-  <!-- ▸ HERO -->
+  <!-- HERO -->
   <section class="hero-simple reveal">
     <div class="container">
       <h1 class="section-title">Learning in Action</h1>
-      <p class="subhead">Real snapshots from our tutoring sessions &amp;&nbsp;workshops.</p>
+      <p class="subhead">Real snapshots from our tutoring sessions &amp; workshops.</p>
     </div>
   </section>
 
-  <!-- ▸ IMAGE-ONLY GALLERY -->
+  <!-- IMAGE-ONLY GALLERY -->
   <section class="section">
     <div class="container gallery-grid">
       <figure><img src="images/1000007007.png" alt=""></figure>
@@ -48,10 +46,10 @@
     </div>
   </section>
 
-  <!-- ▸ FOOTER -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container footer-inner">
-      <div>© 2025 Activate Ed</div>
+      <div>© 2025 ActivateEd</div>
       <ul class="socials">
         <li><a href="#"><img src="images/x-logo.png"        alt="X"></a></li>
         <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
@@ -59,13 +57,6 @@
       </ul>
     </div>
   </footer>
-
-  <!-- Vendor JS (kept for consistency) -->
-  <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
-  <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-  <script src="https://unpkg.com/gsap@3/dist/TextPlugin.min.js"></script>
-  <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
   <!-- Main JS -->
   <script src="script.js"></script>
