--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Gallery | ActivateEd</title>
-
   <!-- Main CSS -->
   <link rel="stylesheet" href="style.css"/>
 </head>
@@ -46,6 +45,7 @@
       <figure><img src="images/1000007009.png" alt=""></figure>
       <figure><img src="images/1000007010.png" alt=""></figure>
       <figure><img src="images/1000007011.png" alt=""></figure>
+      <figure><img src="images/1000007012.png" alt=""></figure>
     </div>
   </section>
 
@@ -54,8 +54,8 @@
     <div class="container footer-inner">
       <div>© 2025 ActivateEd</div>
       <ul class="socials">
-        <li><a href="#"><img src="images/x-logo.png"        alt="X"></a></li>
-        <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
+        <li><a href="#"><img src="images/x-logo.png"         alt="X"></a></li>
+        <li><a href="#"><img src="images/facebook-logo.png"  alt="Facebook"></a></li>
         <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
       </ul>
     </div>
