--- a/stories.html
+++ b/stories.html
@@ -3,37 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stories — Activate Education</title>
+  <title>Stories — ActivateEd</title>
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600&display=swap" rel="stylesheet" />
-
-  <!-- Swiper styles -->
+  <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css" />
 
-  <!-- Main stylesheet -->
+  <!-- Main Stylesheet -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- Header -->
+  <!-- HEADER / NAV -->
   <header class="glass-nav">
-    <div class="nav-wrap">
-      <a class="brand" href="index.html">Activate<span>Ed</span></a>
+    <div class="nav-wrap container">
+      <a class="brand logo" href="index.html">Activate<span>Ed</span></a>
+      <button id="burger" aria-label="Menu"><span></span></button>
       <nav class="desktop-nav" id="mainNav">
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
-        <a href="stories.html" class="active">Stories</a>
+        <a href="impact.html">Impact</a>
+        <a class="active" href="stories.html">Stories</a>
+        <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
       </nav>
-      <button id="themeToggle" aria-label="theme"></button>
-      <button id="burger" aria-label="Menu"><span></span></button>
+      <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
     </div>
   </header>
 
-  <!-- Hero Banner -->
-  <section class="section hero-simple">
+  <!-- HERO BANNER -->
+  <section class="section hero-simple reveal">
     <div class="container">
       <h1 class="section-title">Parent Stories</h1>
       <p class="subhead">
@@ -42,20 +39,20 @@
     </div>
   </section>
 
-  <!-- Testimonials Slider -->
-  <section class="section testimonials">
+  <!-- TESTIMONIALS SLIDER -->
+  <section class="section testimonials reveal">
     <div class="container">
       <div class="swiper" id="testimonialSwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <blockquote>
               “Our daughter’s confidence—and her math grade—skyrocketed in one term.”
-              <cite>— Ella & Marcus R.</cite>
+              <cite>— Ella &amp; Marcus R.</cite>
             </blockquote>
           </div>
           <div class="swiper-slide">
             <blockquote>
-              “300‑point SAT gain. Full‑ride scholarship. Enough said.”
+              “300-point SAT gain. Full-ride scholarship. Enough said.”
               <cite>— Sonya K.</cite>
             </blockquote>
           </div>
@@ -71,37 +68,29 @@
     </div>
   </section>
 
-  <!-- Call to Action -->
-  <section class="section text-center">
-    <div class="container">
-      <h2 class="section-title">Share Your Story</h2>
-      <a href="contact.html" class="btn primary large">Submit Testimonial</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>© 2025 Activate Education. All rights reserved.</p>
+      <p>© 2025 ActivateEd</p>
       <ul class="socials">
-        <li><a href="#"><img src="images/X_logo.png"        alt="X (Twitter)"></a></li>
-        <li><a href="#"><img src="images/Facebook_Logo_(2019).png" alt="Facebook"></a></li>
+        <li><a href="#"><img src="images/x-logo.png" alt="X"></a></li>
+        <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
         <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
       </ul>
     </div>
   </footer>
 
-  <!-- Back to Top -->
+  <!-- BACK TO TOP BUTTON -->
   <button id="toTop" aria-label="Back to top">↑</button>
 
-  <!-- Vendor JS -->
+  <!-- VENDOR JS -->
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/TextPlugin.min.js"></script>
   <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/TextPlugin.min.js"></script>      <!-- NEW -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script> <!-- NEW -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-  <!-- Main JS -->
+  <!-- MAIN JS -->
   <script src="script.js"></script>
 </body>
 </html>
