--- a/gallery.html
+++ b/gallery.html
@@ -1,51 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Gallery | ActivateEd</title>
-  <!-- Main CSS -->
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact | ActivateEd</title>
+
+  <!-- Main Styles -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- NAV -->
+  <!-- HEADER / NAV -->
   <header class="glass-nav">
     <div class="nav-wrap container">
       <a href="index.html" class="brand logo">Activate<span>Ed</span></a>
       <button id="burger" aria-label="Menu"><span></span></button>
-      <nav class="desktop-nav">
+      <nav class="desktop-nav" id="mainNav">
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
+        <a href="impact.html">Impact</a>
         <a href="stories.html">Stories</a>
-        <a class="active" href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
+        <a href="gallery.html">Gallery</a>
+        <a class="active" href="contact.html">Contact</a>
       </nav>
       <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
     </div>
   </header>
 
-  <!-- HERO -->
-  <section class="hero-simple reveal">
-    <div class="container">
-      <h1 class="section-title">Learning in Action</h1>
-      <p class="subhead">Real snapshots from our tutoring sessions &amp; workshops.</p>
-    </div>
-  </section>
-
-  <!-- IMAGE-ONLY GALLERY -->
-  <section class="section">
-    <div class="container gallery-grid">
-      <figure><img src="images/1000006998.png" alt=""></figure>
-      <figure><img src="images/1000006999.png" alt=""></figure>
-      <figure><img src="images/1000007000.png" alt=""></figure>
-      <figure><img src="images/1000007001.png" alt=""></figure>
-      <figure><img src="images/1000007007.png" alt=""></figure>
-      <figure><img src="images/1000007008.png" alt=""></figure>
-      <figure><img src="images/1000007009.png" alt=""></figure>
-      <figure><img src="images/1000007010.png" alt=""></figure>
-      <figure><img src="images/1000007012.png" alt=""></figure>
-    </div>
-  </section>
+  <!-- CONTACT INFO -->
+  <main>
+    <section class="hero-simple reveal">
+      <div class="container">
+        <h1 class="section-title">Get in Touch</h1>
+        <p class="subhead">
+          Have questions or want to learn more?<br/>
+          Text or call us at 
+          <a href="sms:+11234567890">+1 123-456-7890</a><br/>
+          or email 
+          <a href="mailto:info@activateed.com">info@activateed.com</a>.
+        </p>
+      </div>
+    </section>
+  </main>
 
   <!-- FOOTER -->
   <footer class="footer">
@@ -58,6 +54,16 @@
       </ul>
     </div>
   </footer>
+
+  <!-- BACK TO TOP -->
+  <button id="toTop" aria-label="Back to top">↑</button>
+
+  <!-- VENDOR JS -->
+  <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <script src="https://unpkg.com/gsap@3/dist/TextPlugin.min.js"></script>
+  <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
   <!-- Main JS -->
   <script src="script.js"></script>
