--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,8 @@
       <nav class="desktop-nav" id="mainNav">
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
-        <a href="impact.html">Gallery</a>
         <a href="stories.html">Stories</a>
-        <a href="gallery.html">Contact</a>
+        <a href="gallery.html">Gallery</a>
         <a class="active" href="contact.html">Contact</a>
       </nav>
       <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
