--- a/gallery.html
+++ b/gallery.html
@@ -17,8 +17,8 @@
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
         <a href="stories.html">Stories</a>
-        <a class="active" href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
+        <a href="gallery.html">Gallery</a>
+        <a class="active" href="contact.html">Contact</a>
       </nav>
       <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
     </div>
