--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <button id="burger" aria-label="Menu"><span></span></button>
 
       <nav class="desktop-nav" id="mainNav">
-        <a class="active" href="index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="services.html">Services</a>
         <a href="stories.html">Stories</a>
         <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
+        <a class="active" href="contact.html">Contact</a>
       </nav>
 
       <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
