--- a/services.html
+++ b/services.html
@@ -14,10 +14,11 @@
     <a href="index.html" class="logo">Activate<span>Ed</span></a>
 
     <nav class="desktop-nav">
-      <a href="index.html">Home</a>
-      <a class="active" href="services.html">Services</a>
-      <a href="stories.html">Stories</a>
-      <a href="contact.html">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="stories.html">Stories</a>
+        <a href="gallery.html">Gallery</a>
+        <a class="active" href="contact.html">Contact</a>
     </nav>
 
     <button id="burger" aria-label="Menu"><span></span></button>
