--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
           <!-- Middle School Mastery -->
           <div class="card pop reveal">
-            <img src="images/middle_school.png" alt="Middle School Mastery" />
+            <img src="images/middle school.png" alt="Middle School Mastery" />
             <h3>Middle School Mastery</h3>
             <p>
               Personalized instruction across all subjects, plus expert Regents, TACHS,
