--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
         <p class="subhead">
           Have questions or want to learn more?<br/>
           Text or call us at 
-          <a href="sms:+11234567890">+1 123-456-7890</a><br/>
+          <a href="sms:+19147125393">914-712-5393</a><br/>
           or email 
-          <a href="mailto:info@activateed.com">info@activateed.com</a>.
+          <a href="mailto:info@activateedwestchester.com">info@activateedwestchester.com</a>.
         </p>
       </div>
     </section>
