--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
         <p class="subhead">
           Have questions or want to learn more?<br/>
           Text or call us at 
-          <a href="sms:+19147125393">914-712-5393</a><br/>
+          <a href="sms:+19147125393" class="active">914-712-5393</a><br/>
           or email 
-          <a href="mailto:info@activateedwestchester.com">info@activateedwestchester.com</a>.
+          <a href="mailto:info@activateedwestchester.com" class="active">info@activateedwestchester.com</a>.
         </p>
       </div>
     </section>
@@ -47,8 +47,8 @@
     <div class="container footer-inner">
       <div>© 2025 ActivateEd</div>
       <ul class="socials">
-        <li><a href="#"><img src="images/x-logo.png"         alt="X"></a></li>
-        <li><a href="#"><img src="images/facebook-logo.png"  alt="Facebook"></a></li>
+        <li><a href="#"><img src="images/x-logo.png" alt="X"></a></li>
+        <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
         <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
       </ul>
     </div>
