--- a/services.html
+++ b/services.html
@@ -30,6 +30,7 @@
   <div class="container">
     <h1 class="section-title">Our Services</h1>
     <p class="subhead">Tailored programs to unlock every learner’s full potential.</p>
+    <a href="#activelearning" class="btn primary large" style="margin-top: 1rem;">Click here to see our Active Learning in action!</a>
   </div>
 </section>
 
@@ -38,7 +39,7 @@
   <div class="container grid cards">
 
     <!-- Active Learning -->
-    <article class="card pop">
+    <article class="card pop" id="activelearning">
       <img src="images/activelearning.png" alt="">
       <h3>Active Learning</h3>
       <p>
