--- a/services.html
+++ b/services.html
@@ -30,7 +30,9 @@
   <div class="container">
     <h1 class="section-title">Our Services</h1>
     <p class="subhead">Tailored programs to unlock every learner’s full potential.</p>
-    <a href="#activelearning" class="btn primary large" style="margin-top: 1rem;">Click here to see our Active Learning in action!</a>
+    <a href="gallery.html" class="btn primary large" style="margin-top: 1rem;">
+      Click here to see our Active Learning in action!
+    </a>
   </div>
 </section>
 
