--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <blockquote>
-              “Our daughter’s confidence—and her math grade—skyrocketed in one term.”
-              <cite>— Ella &amp; Marcus R.</cite>
+              “Activate Education has been a game-changer for our family. The tutors are patient and truly engage with each child at their level. Communication is clear and regular, so I always know how my daughter is progressing. Her confidence and grades have steadily improved since she started. I can’t recommend Activate Education enough!”
+              <cite>— Samantha R.</cite>
             </blockquote>
           </div>
           <div class="swiper-slide">
