--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
           </div>
           <div class="swiper-slide">
             <blockquote>
-              “300-point SAT gain. Full-ride scholarship. Enough said.”
-              <cite>— Sonya K.</cite>
+              “We’re so grateful to have found Liz and her team. My kid was more than a full year behind grade level in reading at the end of first grade, and super resistant to practice because it was so hard for him and he felt like a failure. A year on, he is virtually at grade level (ie, made two years’ progress in one). The sessions are fun and playful, with short intense blocks of work tailored to his specific needs, and broken up with rest and rewards (great for ADHD kids!). I’m so relieved and grateful for the expertise and support he has had. Highly recommended!!”
+              <cite>— Gillian S.</cite>
             </blockquote>
           </div>
           <div class="swiper-slide">
             <blockquote>
-              “My son went from failing physics to an A+ in just six weeks.”
-              <cite>— Raj Patel</cite>
+              “Our son has been with Activate Education’s tutor for several years now, during which his reading and writing ability and confidence has improved immensely. We cannot recommend Activate enough. Liz is the best at what she does. Highly recommended.”
+              <cite>— Dalmau G.</cite>
             </blockquote>
           </div>
         </div>
