--- a/stories.html
+++ b/stories.html
@@ -45,14 +45,14 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <blockquote>
-              “Our daughter’s confidence—and her math grade—skyrocketed in one term.”
-              <cite>— Ella &amp; Marcus R.</cite>
+              “Our child has been with Activate Education’s tutor for several years now - we can’t be more impressed with Liz’s passion and enthusiasm to help him improve his writing and excel even more at math. Liz is amazing at what she does and our son loves her! Highly recommended.”
+              <cite>— Salman</cite>
             </blockquote>
           </div>
           <div class="swiper-slide">
             <blockquote>
-              “300-point SAT gain. Full-ride scholarship. Enough said.”
-              <cite>— Sonya K.</cite>
+              “Our son has been with Liz from Activate Education for a few years now and he has been thriving in school ever since. Liz is truly a natural who cares about the children that she tutors and it shows when she is with them.”
+              <cite>— Brian E.</cite>
             </blockquote>
           </div>
           <div class="swiper-slide">
