--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,11 @@
       <figure><img src="images/1000007009.png" alt=""></figure>
       <figure><img src="images/1000007010.png" alt=""></figure>
       <figure><img src="images/1000007012.png" alt=""></figure>
+      <figure><img src="images/1000009815.png" alt=""></figure>
+      <figure><img src="images/1000009816.png" alt=""></figure>
+      <figure><img src="images/1000009817.png" alt=""></figure>
+      <figure><img src="images/1000009818.png" alt=""></figure>
+      <figure><img src="images/1000009819.png" alt=""></figure>
     </div>
   </section>
 
