--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
       <button id="burger" aria-label="Menu"><span></span></button>
 
       <nav class="desktop-nav" id="mainNav">
-        <a href="index.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="services.html">Services</a>
+        <a href="approach.html">Curriculum</a>
         <a href="stories.html">Stories</a>
         <a href="gallery.html">Gallery</a>
-        <a class="active" href="contact.html">Contact</a>
+        <a href="contact.html">Contact</a>
       </nav>
 
       <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
@@ -100,6 +101,15 @@
       </div>
     </section>
 
+    <!-- CURRICULUM TEASER -->
+    <section id="curriculum" class="hero-simple reveal">
+      <div class="container" style="text-align:center">
+        <h2 class="section-title">Our Curriculum</h2>
+        <p class="subhead">Structured, multisensory lessons that build skills quickly and clearly.</p>
+        <a href="approach.html" class="btn primary large">Explore the Curriculum</a>
+      </div>
+    </section>
+
     <!-- TESTIMONIALS PREVIEW -->
     <section id="testimonials" class="testimonials reveal">
       <div class="container section-title">Parent Stories</div>
@@ -153,5 +163,8 @@
 
   <!-- Main JS -->
   <script src="script.js"></script>
+
+  <!-- Back-to-top (JS already handles visibility) -->
+  <button id="toTop" aria-label="Back to top">↑</button>
 </body>
 </html>
