--- a/approach.html
+++ b/approach.html
@@ -2,173 +2,174 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Our Curriculum &amp; Approach • ActivateEd</title>
-
-  <!-- Swiper CSS (site-wide include) -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css" />
-  <!-- Site styles -->
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Our Curriculum & Approach | ActivateEd</title>
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Fallback if JS fails: ensure content is visible -->
-  <noscript><style>.reveal{opacity:1!important;transform:none!important}</style></noscript>
 </head>
 <body>
-  <!-- HEADER / NAV -->
-  <header class="glass-nav">
-    <div class="nav-wrap container">
-      <a href="index.html" class="brand logo">Activate<span>Ed</span></a>
-      <button id="burger" aria-label="Menu"><span></span></button>
 
-      <nav class="desktop-nav" id="mainNav">
+<!-- ▸ NAVBAR (matches working page structure) -->
+<header class="glass-nav">
+  <div class="nav-wrap container">
+    <a href="index.html" class="logo">Activate<span>Ed</span></a>
+    <nav class="desktop-nav">
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
         <a class="active" href="approach.html">Curriculum</a>
         <a href="stories.html">Stories</a>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
-      </nav>
+    </nav>
 
-      <button id="themeToggle" aria-label="Toggle Theme">🌙</button>
-    </div>
-  </header>
+    <button id="burger" aria-label="Menu"><span></span></button>
+    <button id="themeToggle" aria-label="Toggle Dark Mode">🌙</button>
+  </div>
+</header>
 
-  <main>
-    <!-- HERO BANNER (no reveal dependency) -->
-    <section class="hero-simple">
-      <div class="container">
-        <h1 class="section-title">Our Curriculum &amp; Approach</h1>
-        <p class="subhead">
-          A specially designed curriculum that balances flexibility and structure. We map clear progressions, meet students where they are, and move them forward rapidly—without cutting corners.
-        </p>
-      </div>
-    </section>
+<!-- ▸ HERO SIMPLE -->
+<section class="hero-simple section">
+  <div class="container">
+    <h1 class="section-title">Our Curriculum &amp; Approach</h1>
+    <p class="subhead">
+      Clear skill progressions. Multisensory teaching. Rapid, durable gains—no shortcuts.
+    </p>
+  </div>
+</section>
 
-    <!-- CORE PILLARS -->
-    <section class="section">
-      <div class="container">
-        <div class="grid cards">
-          <article class="card pop">
-            <h3>Multisensory in nature</h3>
-            <p>
-              Students learn most effectively when more than one sense is engaged. Our instruction is visual and tactile from the beginning, with auditory reinforcement layered in. Manipulatives, write-and-wipe boards, magnetic tiles, and traceable letter paths make abstract concepts concrete. This research-based, multisensory methodology strengthens learning and retention.
-            </p>
-          </article>
+<!-- ▸ CORE PILLARS -->
+<section class="section">
+  <div class="container grid cards">
 
-          <article class="card pop">
-            <h3>Color coding that describes</h3>
-            <p>
-              We apply uniform color systems to reduce cognitive load and make patterns stand out. Sounds, syllable types, parts of speech, steps in a strategy, and problem structures each get their own color family. Students can “see” structure at a glance and recall it later with less effort.
-            </p>
-          </article>
+    <article class="card pop">
+      <h3>Multisensory in nature</h3>
+      <p>
+        Instruction is visual and tactile from the start, with auditory reinforcement added.
+        Manipulatives, write-and-wipe boards, magnetic tiles, and traceable letter paths make
+        abstract concepts concrete. This research-based approach strengthens learning and retention.
+      </p>
+    </article>
 
-          <article class="card pop">
-            <h3>Fast reading improvement using decoding/encoding</h3>
-            <p>
-              Our method teaches reading and spelling together. Students don’t just decode words; they also encode them. This accelerates transfer from discrete practice to fluent reading and authentic writing.
-            </p>
-          </article>
+    <article class="card pop">
+      <h3>Color coding that describes</h3>
+      <p>
+        Uniform color systems reduce cognitive load and make patterns stand out. Sounds, syllable
+        types, parts of speech, strategy steps, and problem structures each get their own color
+        family so structure is visible at a glance.
+      </p>
+    </article>
 
-          <article class="card pop">
-            <h3>Resolving the end-of-word issue</h3>
-            <p>
-              Many early readers lose energy before the final sounds. We tackle this head-on. Short, high-repetition drills sharpen phonemic awareness and train students to hold all sounds through the last letter. We practice accurate blending/segmenting, then build memory for ending clusters so words are read—and understood—to the end.
-            </p>
-          </article>
+    <article class="card pop">
+      <h3>Fast reading via decode ↔ encode</h3>
+      <p>
+        We teach reading and spelling together. Students decode and encode, wiring sound→symbol and
+        symbol→sound in tandem to accelerate transfer into real reading and writing.
+      </p>
+    </article>
 
-          <article class="card pop">
-            <h3>“Rule breakers” learned at the right time</h3>
-            <p>
-              Irregular words (“was,” “said,” “one”) come later—after foundations are automatic. We first secure mastery with fully decodable words (“bat,” “ship,” “jump”). Only then do we introduce rule breakers with clear visual marking and memory cues, avoiding confusion and guess-reading.
-            </p>
-          </article>
+    <article class="card pop">
+      <h3>Solving the end-of-word issue</h3>
+      <p>
+        Short, high-rep drills sharpen phonemic awareness so students hold all sounds through the
+        last letter. We train accurate blend/segment and strengthen memory for ending clusters so
+        words are read to the end.
+      </p>
+    </article>
 
-          <article class="card pop">
-            <h3>Knowledge from day one</h3>
-            <p>
-              We teach upper-level comprehension alongside decoding. Students learn to track purpose, anticipate structure, and monitor meaning while reading. Purposeful highlighting moves beyond “introduction, main idea, conclusion” to flag claims, evidence, tone shifts, and cause/effect chains so thinking is visible on the page.
-            </p>
-          </article>
+    <article class="card pop">
+      <h3>“Rule breakers” at the right time</h3>
+      <p>
+        Irregular words (“was,” “said,” “one”) come after automatic foundations with decodable
+        words (“bat,” “ship,” “jump”). We mark rule-breakers visually with memory cues to prevent
+        confusion and guess-reading.
+      </p>
+    </article>
 
-          <article class="card pop">
-            <h3>Mind maps that organize ideas</h3>
-            <p>
-              Idea maps, sequence charts, compare/contrast matrices, and cause-effect chains help students plan writing and discuss texts with precision. Over time, these frames become internal checklists students can run mentally—even without paper.
-            </p>
-          </article>
+    <article class="card pop">
+      <h3>Knowledge from day one</h3>
+      <p>
+        Upper-level comprehension is taught alongside decoding. Purposeful highlighting flags
+        claims, evidence, tone shifts, and cause/effect—not just “intro, main idea, conclusion”—
+        so thinking is visible on the page.
+      </p>
+    </article>
 
-          <article class="card pop">
-            <h3>Math that lasts</h3>
-            <p>
-              Math is not abstract here. We begin with concrete tools, bridge to pictures, then to symbols. Money is a frequent anchor because it’s intuitive and real-world. We still drill—fluency matters—but we make “old school” drilling enjoyable with games, timed self-challenges, and immediate feedback.
-            </p>
-          </article>
+    <article class="card pop">
+      <h3>Mind maps that organize ideas</h3>
+      <p>
+        Idea maps, sequence charts, compare/contrast matrices, and cause-effect chains help plan
+        writing and discussions. Over time, these become internal checklists students can run
+        mentally—even without paper.
+      </p>
+    </article>
 
-          <article class="card pop">
-            <h3>Motivation that builds habits: the Ticket System</h3>
-            <p>
-              Students earn tickets throughout the lesson for accuracy, resilience, and focus. Tickets can be exchanged for prizes right away or saved for larger rewards later. This simple economy teaches goal setting, delayed gratification, and consistent effort—skills that transfer beyond academics.
-            </p>
-          </article>
+    <article class="card pop">
+      <h3>Math that lasts</h3>
+      <p>
+        Concrete → pictorial → abstract. Money is a frequent anchor because it’s intuitive and
+        real-world. We still drill for fluency, but make it fun with games, timed self-challenges,
+        and immediate feedback.
+      </p>
+    </article>
 
-          <article class="card pop">
-            <h3>A group of qualified educators</h3>
-            <p>
-              Our tutoring team is made entirely of certified teachers trained in our curriculum and approach. Shared lesson frameworks, progressions, and materials keep instruction consistent and quality high.
-            </p>
-          </article>
-        </div>
-      </div>
-    </section>
+    <article class="card pop">
+      <h3>Ticket rewards system</h3>
+      <p>
+        Students earn tickets for accuracy, resilience, and focus, redeemable for prizes now or
+        later. It builds goal-setting, delayed gratification, and consistent effort.
+      </p>
+    </article>
 
-    <!-- LESSON FLOW -->
-    <section class="hero-simple">
-      <div class="container">
-        <h2 class="section-title">What a lesson looks like</h2>
-        <p class="subhead">A clear arc that blends explicit teaching with playful practice.</p>
-        <div class="grid cards">
-          <article class="card"><h3>Warm-up &amp; goals</h3><p>Quick activation of prior knowledge and targets.</p></article>
-          <article class="card"><h3>Decoding ↔ encoding loop</h3><p>Phonemic drills, blending/segmenting, immediate application.</p></article>
-          <article class="card"><h3>Guided reading</h3><p>Purposeful highlighting + brief comprehension talk-throughs.</p></article>
-          <article class="card"><h3>Hands-on math</h3><p>Concrete → pictorial → abstract with real-world anchors.</p></article>
-          <article class="card"><h3>Fluency game</h3><p>Short, high-energy practice that feels like play.</p></article>
-          <article class="card"><h3>Wrap-up</h3><p>Micro-feedback, tickets, and a tiny at-home task if helpful.</p></article>
-        </div>
-      </div>
-    </section>
+    <article class="card pop">
+      <h3>A team of qualified educators</h3>
+      <p>
+        All tutors are certified teachers trained in our methodology and curriculum. Shared
+        frameworks, progressions, and materials keep instruction consistent and quality high.
+      </p>
+    </article>
 
-    <!-- CTA -->
-    <section class="section" id="cta">
-      <div class="container" style="text-align:center">
-        <p class="subhead" style="margin-bottom:1.2rem">Want to see how this looks for your child?</p>
-        <a href="contact.html" class="btn primary large">Book a free consult</a>
-      </div>
-    </section>
-  </main>
+  </div>
+</section>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container footer-inner">
-      <div>© 2025 ActivateEd</div>
-      <ul class="socials">
-        <li><a href="#"><img src="images/x-logo.png" alt="X"></a></li>
-        <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
-        <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
-      </ul>
-    </div>
-  </footer>
+<!-- ▸ LESSON FLOW -->
+<section class="section">
+  <div class="container grid cards">
+    <article class="card"><h3>Warm-up &amp; goals</h3><p>Activate prior knowledge and preview targets.</p></article>
+    <article class="card"><h3>Decode ↔ encode loop</h3><p>Phonemic drills, blend/segment, immediate application.</p></article>
+    <article class="card"><h3>Guided reading</h3><p>Purposeful highlighting with brief comprehension talk-throughs.</p></article>
+    <article class="card"><h3>Hands-on math</h3><p>Concrete → pictorial → abstract with real-world anchors.</p></article>
+    <article class="card"><h3>Fluency game</h3><p>Short, high-energy practice that feels like play.</p></article>
+    <article class="card"><h3>Wrap-up</h3><p>Micro-feedback, tickets, and a tiny at-home task.</p></article>
+  </div>
+</section>
 
-  <!-- Back-to-top -->
-  <button id="toTop" aria-label="Back to top">↑</button>
+<!-- ▸ CTA -->
+<section class="section">
+  <div class="container" style="text-align:center">
+    <p class="subhead" style="margin-bottom:1.2rem">
+      Want to see how this looks for your child?
+    </p>
+    <a href="contact.html" class="btn primary large">Book a free consult</a>
+  </div>
+</section>
 
-  <!-- Vendor JS -->
-  <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
-  <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-  <script src="https://unpkg.com/gsap@3/dist/TextPlugin.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-  <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
+<!-- ▸ FOOTER -->
+<footer class="footer">
+  <div class="footer-inner container">
+    <span>© 2025 ActivateEd</span>
+    <ul class="socials">
+      <li><a href="#"><img src="images/x-logo.png"         alt="X"></a></li>
+      <li><a href="#"><img src="images/facebook-logo.png"  alt="Facebook"></a></li>
+      <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
+    </ul>
+  </div>
+</footer>
 
-  <!-- Site JS -->
-  <script src="script.js"></script>
+<!-- JS (same includes/order as your working page) -->
+<script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+<script src="https://unpkg.com/gsap@3/dist/TextPlugin.min.js"></script>
+<script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
