--- a/approach.html
+++ b/approach.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<!-- ▸ NAVBAR (matches working page structure) -->
+<!-- ▸ NAVBAR (matches your working page) -->
 <header class="glass-nav">
   <div class="nav-wrap container">
     <a href="index.html" class="logo">Activate<span>Ed</span></a>
@@ -31,124 +31,85 @@
   <div class="container">
     <h1 class="section-title">Our Curriculum &amp; Approach</h1>
     <p class="subhead">
-      Clear skill progressions. Multisensory teaching. Rapid, durable gains—no shortcuts.
+      At ActivateEd, every lesson is built on a specially designed curriculum that balances flexibility and structure. We map out clear skill progressions. We meet students where they are. We move them forward rapidly without cutting corners.
     </p>
   </div>
 </section>
 
-<!-- ▸ CORE PILLARS -->
+<!-- ▸ CORE CONTENT AS CARDS -->
 <section class="section">
   <div class="container grid cards">
 
     <article class="card pop">
       <h3>Multisensory in nature</h3>
       <p>
-        Instruction is visual and tactile from the start, with auditory reinforcement added.
-        Manipulatives, write-and-wipe boards, magnetic tiles, and traceable letter paths make
-        abstract concepts concrete. This research-based approach strengthens learning and retention.
+        Students learn most effectively when more than one sense is being used. Our instruction is visual and tactile from the beginning, with auditory reinforcement added. Manipulatives, write and wipe boards, magnetic tiles, and traceable letter paths make abstract concepts concrete. This research based, multisensory methodology consistently strengthens learning and retention.
       </p>
     </article>
 
     <article class="card pop">
       <h3>Color coding that describes</h3>
       <p>
-        Uniform color systems reduce cognitive load and make patterns stand out. Sounds, syllable
-        types, parts of speech, strategy steps, and problem structures each get their own color
-        family so structure is visible at a glance.
+        We apply uniform color systems in order to minimize cognitive load and make patterns stand out. Sounds, types of syllables, parts of speech, steps in a strategy, and problem structures all receive their own color family. Students are able to "see" structure at a glance and later recall it with less effort.
       </p>
     </article>
 
     <article class="card pop">
-      <h3>Fast reading via decode ↔ encode</h3>
+      <h3>Fast reading improvement using decoding/encoding</h3>
       <p>
-        We teach reading and spelling together. Students decode and encode, wiring sound→symbol and
-        symbol→sound in tandem to accelerate transfer into real reading and writing.
+        Our unique method instructs reading and spelling together. Not only do students decode words, but they encode them as well. This accelerates transfer from discrete practice to reading and writing.
       </p>
     </article>
 
     <article class="card pop">
-      <h3>Solving the end-of-word issue</h3>
+      <h3>Resolving the end of word issue</h3>
       <p>
-        Short, high-rep drills sharpen phonemic awareness so students hold all sounds through the
-        last letter. We train accurate blend/segment and strengthen memory for ending clusters so
-        words are read to the end.
+        Most early readers lose energy before the end sounds. We tackle this head on. Short, high repetition drills sharpen phonemic awareness and have students hold all sounds through the last letter. We do exact blending and segmenting practice, then develop memory for word end clusters so texts are read to the end.
       </p>
     </article>
 
     <article class="card pop">
-      <h3>“Rule breakers” at the right time</h3>
+      <h3>"Rule breakers" learned at the right time</h3>
       <p>
-        Irregular words (“was,” “said,” “one”) come after automatic foundations with decodable
-        words (“bat,” “ship,” “jump”). We mark rule-breakers visually with memory cues to prevent
-        confusion and guess-reading.
+        Irregular words ("was," "said," "one") follow later when foundations are automatic. We first gain mastery of totally decodable words ("bat," "ship," "jump"). Then, and only then, do we introduce rule breakers with clear visual marking and memory cues, avoiding confusion and guess reading.
       </p>
     </article>
 
     <article class="card pop">
       <h3>Knowledge from day one</h3>
       <p>
-        Upper-level comprehension is taught alongside decoding. Purposeful highlighting flags
-        claims, evidence, tone shifts, and cause/effect—not just “intro, main idea, conclusion”—
-        so thinking is visible on the page.
+        We teach upper level comprehension skills side by side with decoding. Students learn to monitor purpose, predict structure, and track meaning while reading. We use purposeful highlighting to move beyond underlining "introduction, main idea, conclusion." Color cues differentiate claims, evidence, tone shifts, and cause/effect chains so thinking is visible on the page.
       </p>
     </article>
 
     <article class="card pop">
       <h3>Mind maps that organize ideas</h3>
       <p>
-        Idea maps, sequence charts, compare/contrast matrices, and cause-effect chains help plan
-        writing and discussions. Over time, these become internal checklists students can run
-        mentally—even without paper.
+        Idea maps, sequence charts, compare/contrast matrices, and cause-effect chains help students plan writing and discuss texts with precision. Over time, these maps become internal checklists that students can run through in their heads, even without paper.
       </p>
     </article>
 
     <article class="card pop">
       <h3>Math that lasts</h3>
       <p>
-        Concrete → pictorial → abstract. Money is a frequent anchor because it’s intuitive and
-        real-world. We still drill for fluency, but make it fun with games, timed self-challenges,
-        and immediate feedback.
+        Math is not abstract here. We begin with manipulative representations, then transition. For example: money is a common anchor since it's real world and intuitive, so we use it. We still drill, since fluency is important, but we ensure "old school" drilling is enjoyable through games and immediate feedback.
       </p>
     </article>
 
     <article class="card pop">
-      <h3>Ticket rewards system</h3>
+      <h3>Motivation that builds habits: the Ticket System</h3>
       <p>
-        Students earn tickets for accuracy, resilience, and focus, redeemable for prizes now or
-        later. It builds goal-setting, delayed gratification, and consistent effort.
+        Students earn tickets throughout the lesson for accuracy, resilience, and focus. Tickets can be exchanged for prizes right away or saved for bigger rewards later. This simple economy teaches goal setting, delayed gratification, and consistent effort. These skills transfer beyond academics.
       </p>
     </article>
 
     <article class="card pop">
-      <h3>A team of qualified educators</h3>
+      <h3>A group of qualified educators</h3>
       <p>
-        All tutors are certified teachers trained in our methodology and curriculum. Shared
-        frameworks, progressions, and materials keep instruction consistent and quality high.
+        Our tutors are all qualified teachers trained in our curriculum and approach. We have common lesson frameworks, progressions, and materials. Our quality is always high.
       </p>
     </article>
 
-  </div>
-</section>
-
-<!-- ▸ LESSON FLOW -->
-<section class="section">
-  <div class="container grid cards">
-    <article class="card"><h3>Warm-up &amp; goals</h3><p>Activate prior knowledge and preview targets.</p></article>
-    <article class="card"><h3>Decode ↔ encode loop</h3><p>Phonemic drills, blend/segment, immediate application.</p></article>
-    <article class="card"><h3>Guided reading</h3><p>Purposeful highlighting with brief comprehension talk-throughs.</p></article>
-    <article class="card"><h3>Hands-on math</h3><p>Concrete → pictorial → abstract with real-world anchors.</p></article>
-    <article class="card"><h3>Fluency game</h3><p>Short, high-energy practice that feels like play.</p></article>
-    <article class="card"><h3>Wrap-up</h3><p>Micro-feedback, tickets, and a tiny at-home task.</p></article>
-  </div>
-</section>
-
-<!-- ▸ CTA -->
-<section class="section">
-  <div class="container" style="text-align:center">
-    <p class="subhead" style="margin-bottom:1.2rem">
-      Want to see how this looks for your child?
-    </p>
-    <a href="contact.html" class="btn primary large">Book a free consult</a>
   </div>
 </section>
 
@@ -164,7 +125,7 @@
   </div>
 </footer>
 
-<!-- JS (same includes/order as your working page) -->
+<!-- JS (same order as your working page) -->
 <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/TextPlugin.min.js"></script>
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
