--- a/services.html
+++ b/services.html
@@ -15,6 +15,7 @@
     <nav class="desktop-nav">
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
+        <a href="approach.html">Curriculum</a>
         <a href="stories.html">Stories</a>
         <a href="gallery.html">Gallery</a>
         <a class="active" href="contact.html">Contact</a>
