--- a/approach.html
+++ b/approach.html
@@ -104,9 +104,9 @@
     </article>
 
     <article class="card pop">
-      <h3>A group of qualified educators</h3>
+      <h3>A group of certified educators</h3>
       <p>
-        Our tutors are all qualified teachers trained in our curriculum and approach. We have common lesson frameworks, progressions, and materials. Our quality is always high.
+        Our tutors are all certified teachers trained in our curriculum and approach. We have common lesson frameworks, progressions, and materials. Our quality is always high.
       </p>
     </article>
 
