--- a/gallery.html
+++ b/gallery.html
@@ -50,6 +50,7 @@
       <figure><img src="images/1000007009.png" alt=""></figure>
       <figure><img src="images/1000007010.png" alt=""></figure>
       <figure><img src="images/1000007012.png" alt=""></figure>
+      <figure><img src="unnamed1.png" alt=""></figure>
     </div>
   </section>
 
